fix: carousel clipping and wishcard style

--- a/design/scss/custom/_home.scss
+++ b/design/scss/custom/_home.scss
@@ -15,7 +15,7 @@
 		}
 	}
 
-	#sample-cards-carousel {
+	#desktop-cards-carousel, #mobile-cards-carousel {
 		img {
 			height: 240px;
 			width: auto;
